--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,5 @@ dependencies {
 
     implementation 'org.pcollections:pcollections:2.1.2'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.annotation:annotation:1.0.2'
 }
