--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,5 @@ dependencies {
     implementation 'org.pcollections:pcollections:2.1.2'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.annotation:annotation:1.0.2'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 }
