--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.ShaHar91.poemcollection"
+        applicationId "com.shahar91.poemcollection"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
@@ -27,11 +27,30 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation 'cat.ereza:customactivityoncrash:2.2.0'
+
+    implementation 'org.pcollections:pcollections:2.1.2'
+
+    implementation 'com.yheriatovych:reductor:0.14.0'
+    annotationProcessor 'com.yheriatovych:reductor-processor:0.14.0'
+//    implementation "com.yheriatovych:reductor-rxjava2:0.14.0"
+
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+    provided "com.google.auto.value:auto-value:1.6.2"
+    annotationProcessor "com.google.auto.value:auto-value:1.6.2"
+
+    provided 'com.ryanharter.auto.value:auto-value-gson:0.8.0'
+    annotationProcessor 'com.ryanharter.auto.value:auto-value-gson:0.8.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
+//    implementation 'com.google.android.material:material:1.0.0'
+//    implementation 'androidx.annotation:annotation:1.0.2'
+//    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+
 
     ////////////////////////////////////////////////////////////////////////////////////////////////
     //// Needed for Dagger
@@ -43,8 +62,8 @@ dependencies {
     implementation "com.jakewharton.timber:timber:4.7.1"
 
     // Butterknife
-    implementation 'com.jakewharton:butterknife:10.0.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
+    implementation 'com.jakewharton:butterknife:10.1.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
     // Rx
     implementation "io.reactivex.rxjava2:rxjava:2.2.6"
@@ -56,23 +75,7 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:3.12.2"
     implementation "com.squareup.okhttp3:logging-interceptor:3.12.2"
 
-    ////////////////////////////////////////////////////////////////////////////////////////////////
-    //// Needed for Redux
-    ////////////////////////////////////////////////////////////////////////////////////////////////
-    implementation 'com.yheriatovych:reductor:0.14.0'
-    annotationProcessor 'com.yheriatovych:reductor-processor:0.14.0'
-    implementation "com.yheriatovych:reductor-rxjava2:0.14.0"
-
-    implementation 'com.google.code.gson:gson:2.8.5'
-
-    provided "com.google.auto.value:auto-value:1.6.2"
-    annotationProcessor "com.google.auto.value:auto-value:1.6.2"
-
-    provided 'com.ryanharter.auto.value:auto-value-gson:0.8.0'
-    annotationProcessor 'com.ryanharter.auto.value:auto-value-gson:0.8.0'
-
-    implementation 'org.pcollections:pcollections:2.1.2'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.annotation:annotation:1.0.2'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    // ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0"
 }
