--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.shahar91.poemcollection"
+        applicationId "com.shahar91.poems"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
@@ -32,11 +32,14 @@ dependencies {
 
     implementation 'cat.ereza:customactivityoncrash:2.2.0'
 
+    ////////////////////////////////////////////////////////////////////////////////////////////////
+    //// Needed for Redux
+    ////////////////////////////////////////////////////////////////////////////////////////////////
     implementation 'org.pcollections:pcollections:2.1.2'
 
     implementation 'com.yheriatovych:reductor:0.14.0'
     annotationProcessor 'com.yheriatovych:reductor-processor:0.14.0'
-//    implementation "com.yheriatovych:reductor-rxjava2:0.14.0"
+    implementation "com.yheriatovych:reductor-rxjava2:0.14.0"
 
     implementation 'com.google.code.gson:gson:2.8.5'
 
@@ -47,9 +50,9 @@ dependencies {
     annotationProcessor 'com.ryanharter.auto.value:auto-value-gson:0.8.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
-//    implementation 'com.google.android.material:material:1.0.0'
-//    implementation 'androidx.annotation:annotation:1.0.2'
-//    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.annotation:annotation:1.0.2'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
 
     ////////////////////////////////////////////////////////////////////////////////////////////////
@@ -78,4 +81,16 @@ dependencies {
     // ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0"
+
+
+    ////////////////////////////////////////////////////////////////////////////////////////////////
+    //// Needed for Firebase Stuff
+    ////////////////////////////////////////////////////////////////////////////////////////////////
+    implementation 'com.google.firebase:firebase-core:17.0.0'
+//    implementation 'com.google.firebase:firebase-database:18.0.0'
+//    implementation 'com.firebaseui:firebase-ui-database:2.0.1'
+
+    implementation 'com.google.firebase:firebase-firestore:20.1.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
