--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.shahar91.poemcollection">
+    package="com.shahar91.poems">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".MyApp"
+        android:name="com.shahar91.poems.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.error.ErrorActivity"></activity>
-        <activity android:name=".ui.landing.LandingActivity">
+        <activity android:name="com.shahar91.poems.ui.error.ErrorActivity"></activity>
+        <activity android:name="com.shahar91.poems.ui.landing.LandingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.main.MainActivity" />
+        <activity android:name="com.shahar91.poems.ui.main.MainActivity" />
     </application>
 
 </manifest>
