--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,21 +6,21 @@
 
     <application
         android:name="com.shahar91.poems.MyApp"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.shahar91.poems.ui.error.ErrorActivity"></activity>
+        <activity android:name="com.shahar91.poems.ui.error.ErrorActivity"/>
         <activity android:name="com.shahar91.poems.ui.landing.LandingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.shahar91.poems.ui.main.MainActivity" />
+        <activity android:name="com.shahar91.poems.ui.home.HomeActivity" />
     </application>
 
 </manifest>
