--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 
     implementation 'cat.ereza:customactivityoncrash:2.2.0'
 
+    implementation 'com.hannesdorfmann:adapterdelegates4:4.0.0'
+
     ////////////////////////////////////////////////////////////////////////////////////////////////
     //// Needed for Redux
     ////////////////////////////////////////////////////////////////////////////////////////////////
