--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,8 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
@@ -17,39 +21,47 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility = '1.8'
-        targetCompatibility = '1.8'
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation 'cat.ereza:customactivityoncrash:2.3.0'
 
-    implementation 'com.hannesdorfmann:adapterdelegates4:4.0.0'
+    implementation 'com.hannesdorfmann:adapterdelegates4:4.3.0'
+
+    implementation 'com.airbnb.android:epoxy:3.9.0'
+    // Add the annotation processor if you are using Epoxy's annotations (recommended)
+    kapt 'com.airbnb.android:epoxy-processor:3.9.0'
+
+    implementation 'me.zhanghai.android.materialratingbar:library:1.4.0'
 
     ////////////////////////////////////////////////////////////////////////////////////////////////
     //// Needed for Redux
     ////////////////////////////////////////////////////////////////////////////////////////////////
-    implementation 'org.pcollections:pcollections:2.1.2'
+    implementation 'org.pcollections:pcollections:3.1.3'
 
     implementation 'com.yheriatovych:reductor:0.14.0'
-    annotationProcessor 'com.yheriatovych:reductor-processor:0.14.0'
+    kapt 'com.yheriatovych:reductor-processor:0.14.0'
     implementation "com.yheriatovych:reductor-rxjava2:0.14.0"
 
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
-    provided "com.google.auto.value:auto-value:1.6.2"
-    annotationProcessor "com.google.auto.value:auto-value:1.6.2"
+    compileOnly "com.google.auto.value:auto-value:1.7"
+    annotationProcessor "com.google.auto.value:auto-value:1.7"
 
-    provided 'com.ryanharter.auto.value:auto-value-gson:0.8.0'
+    compileOnly 'com.ryanharter.auto.value:auto-value-gson:0.8.0'
     annotationProcessor 'com.ryanharter.auto.value:auto-value-gson:0.8.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
@@ -61,25 +73,25 @@ dependencies {
     ////////////////////////////////////////////////////////////////////////////////////////////////
     //// Needed for Dagger
     ////////////////////////////////////////////////////////////////////////////////////////////////
-    implementation 'com.google.dagger:dagger:2.22'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.22'
+    implementation 'com.google.dagger:dagger:2.27'
+    kapt 'com.google.dagger:dagger-compiler:2.22'
 
     // Logging
     implementation "com.jakewharton.timber:timber:4.7.1"
 
     // Butterknife
-    implementation 'com.jakewharton:butterknife:10.1.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
+    implementation 'com.jakewharton:butterknife:10.2.1'
+    kapt 'com.jakewharton:butterknife-compiler:10.1.0'
 
     // Rx
     implementation "io.reactivex.rxjava2:rxjava:2.2.8"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
-    implementation 'com.uber.autodispose:autodispose-kotlin:0.4.0'
-    implementation 'com.uber.autodispose:autodispose-android-kotlin:0.4.0'
+    implementation 'com.uber.autodispose:autodispose-kotlin:0.8.0'
+    implementation 'com.uber.autodispose:autodispose-android-kotlin:0.8.0'
 
     // Http
-    implementation "com.squareup.okhttp3:okhttp:3.12.2"
-    implementation "com.squareup.okhttp3:logging-interceptor:3.12.2"
+    implementation "com.squareup.okhttp3:okhttp:4.4.1"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.4.1"
 
     // ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
