--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,10 @@ dependencies {
 
     implementation 'me.zhanghai.android.materialratingbar:library:1.4.0'
 
+    //image loading/caching
+    api 'com.github.bumptech.glide:glide:4.9.0'
+    kapt 'com.github.bumptech.glide:compiler:4.9.0'
+
     ////////////////////////////////////////////////////////////////////////////////////////////////
     //// Needed for Redux
     ////////////////////////////////////////////////////////////////////////////////////////////////
