--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         // in the individual module build.gradle files
 
         classpath 'com.google.gms:google-services:4.3.3'
+        classpath "io.realm:realm-gradle-plugin:6.0.2"
     }
 }
 
