--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,25 +2,27 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.shahar91.poems">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.shahar91.poems.MyApp"
+        android:name=".MyApp"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.shahar91.poems.ui.error.ErrorActivity"/>
-        <activity android:name="com.shahar91.poems.ui.landing.LandingActivity">
+        <activity android:name=".ui.add.AddPoemActivity"></activity>
+        <activity android:name=".ui.error.ErrorActivity" />
+        <activity android:name=".ui.landing.LandingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.shahar91.poems.ui.home.HomeActivity" />
+        <activity android:name=".ui.home.HomeActivity" />
     </application>
 
 </manifest>
