--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.add.AddPoemActivity"></activity>
+        <activity android:name=".ui.entry.EntryActivity"
+            android:theme="@style/AppTheme.Entry"/>
+        <activity android:name=".ui.add.AddPoemActivity" />
         <activity android:name=".ui.error.ErrorActivity" />
-        <activity android:name=".ui.landing.LandingActivity">
+        <activity
+            android:name=".ui.landing.LandingActivity"
+            android:theme="@style/AppTheme.Landing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
