--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
@@ -38,6 +42,7 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
 
     implementation 'cat.ereza:customactivityoncrash:2.3.0'
 
@@ -52,6 +57,8 @@ dependencies {
     //image loading/caching
     api 'com.github.bumptech.glide:glide:4.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
+
+    implementation "androidx.core:core-ktx:1.2.0"
 
     ////////////////////////////////////////////////////////////////////////////////////////////////
     //// Needed for Redux
@@ -71,7 +78,7 @@ dependencies {
     annotationProcessor 'com.ryanharter.auto.value:auto-value-gson:0.8.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
