--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
         maven {
             url 'https://maven.google.com'
         }
@@ -15,8 +16,8 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
-        classpath 'com.google.gms:google-services:4.3.3'
         classpath "io.realm:realm-gradle-plugin:6.0.2"
+        classpath 'com.google.gms:google-services:4.3.3'
     }
 }
 
