--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
 
+    kapt 'dk.ilios:realmfieldnameshelper:1.1.1'
+
     implementation 'cat.ereza:customactivityoncrash:2.3.0'
 
     implementation 'com.hannesdorfmann:adapterdelegates4:4.3.0'
