--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".ui.entry.EntryActivity"
-            android:theme="@style/AppTheme.Entry"/>
+            android:theme="@style/AppTheme.Entry" />
         <activity android:name=".ui.add.AddPoemActivity" />
         <activity android:name=".ui.error.ErrorActivity" />
         <activity
@@ -29,5 +30,4 @@
         </activity>
         <activity android:name=".ui.home.HomeActivity" />
     </application>
-
 </manifest>
