--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,8 @@ android {
     }
     productFlavors {
         dev {
-            buildConfigField "String", "API_HOST", "\"http://10.0.2.2:5000/api/v1/\""
+            //TODO: to test with emulator on local device "10.0.2.2:${PortNumber}"
+            buildConfigField "String", "API_HOST", "\"http://192.168.0.245:5000/api/v1/\""
             applicationIdSuffix ".dev"
             versionNameSuffix "-dev"
         }
@@ -37,7 +38,7 @@ android {
             versionNameSuffix "-stg"
         }
         prod {
-            buildConfigField "String", "API_HOST", "\"http://10.0.2.2:5000/api/v1/\""
+            buildConfigField "String", "API_HOST", "\"http://192.168.0.245:5000/api/v1/\""
         }
     }
     buildTypes {
@@ -106,7 +107,7 @@ dependencies {
     annotationProcessor 'com.ryanharter.auto.value:auto-value-gson:0.8.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
+    implementation 'com.google.android.material:material:1.3.0-alpha01'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
