--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,11 @@
         <activity
             android:name=".ui.add.AddPoemActivity"
             android:screenOrientation="behind" />
+
         <activity
-            android:name=".ui.landing.LandingActivity"
-            android:launchMode="singleTask"
-            android:screenOrientation="behind"
-            android:theme="@style/AppTheme.Landing">
+            android:name=".ui.home.HomeActivity"
+            android:theme="@style/AppTheme.Landing"
+            android:screenOrientation="behind">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
@@ -32,8 +32,5 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.home.HomeActivity"
-            android:screenOrientation="behind" />
     </application>
 </manifest>
