--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ buildscript {
 
         classpath "io.realm:realm-gradle-plugin:6.0.2"
         classpath 'com.google.gms:google-services:4.3.3'
+
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0"
     }
 }
 
