--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,12 @@ dependencies {
     //// Needed for Firebase Stuff
     ////////////////////////////////////////////////////////////////////////////////////////////////
     implementation 'com.google.firebase:firebase-core:17.2.3'
+
+    // rx ==> RxAndroid does not replace rxJava. It is a small library of Android specific rxJava utilities.
+    // For example it makes the Android application main thread available as an rxJava scheduler.
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
 }
 
 apply plugin: 'com.google.gms.google-services'
