--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "core"]
 	path = core
-	url = git@bitbucket.org:appwise/androidcore.git
+url=https://ChristianoBolla@bitbucket.org/appwise/androidcore.git
