--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,6 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'androidx.navigation.safeargs.kotlin'
 
-apply plugin: 'realm-android'
-
 // define build version
 def versionMajor = 0
 def versionMinor = 0
@@ -68,20 +66,14 @@ dependencies {
 
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
 
-    kapt 'dk.ilios:realmfieldnameshelper:1.1.1'
-
     implementation 'me.zhanghai.android.materialratingbar:library:1.4.0'
+
+    kapt "androidx.room:room-compiler:2.3.0"
 
     ////////////////////////////////////////////////////////////////////////////////////////////////
     //// Needed for Firebase Stuff
     ////////////////////////////////////////////////////////////////////////////////////////////////
     implementation 'com.google.firebase:firebase-core:17.2.3'
-
-    // rx ==> RxAndroid does not replace rxJava. It is a small library of Android specific rxJava utilities.
-    // For example it makes the Android application main thread available as an rxJava scheduler.
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
 }
 
 apply plugin: 'com.google.gms.google-services'
