A long awaited overhaul of a couple of things, placed the toolbar on every fragment instead of the HomeActivity, working on the EntryActivity/Fragment to cleanup some things and add Nav Components to it as well.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,13 +23,18 @@
 
         <activity
             android:name=".ui.home.HomeActivity"
-            android:theme="@style/AppTheme.Landing"
-            android:screenOrientation="behind">
+            android:screenOrientation="behind"
+            android:theme="@style/AppTheme.Landing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <intent-filter>
+                <action android:name="${applicationId}.logout" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
