Updating all things regarding the dependencies. Also updated AndroidCore and fixed every breaking changes

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,8 @@
 # Automatically convert third-party libraries to use AndroidX
+android.defaults.buildfeatures.buildconfig=true
 android.enableJetifier=true
+android.nonFinalResIds=false
+android.nonTransitiveRClass=false
 # org.gradle.parallel=true
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
@@ -17,4 +20,3 @@ org.gradle.jvmargs=-Xmx1536m
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-
