--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,44 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.30'
+    ext.kotlin_version = '1.8.0'
     repositories {
-        google()
         jcenter()
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+
+        maven { url 'maven.google.com' }
+        maven { url 'https://maven.fabric.io/public' }
         maven { url "https://jitpack.io" }
-        maven {
-            url 'https://maven.google.com'
-        }
+        maven { url 'https://plugins.gradle.org/m2/'}
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
+        classpath 'com.android.tools.build:gradle:8.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
-        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.google.gms:google-services:4.3.10'
 
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0"
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0'
     }
 }
 
 allprojects {
     repositories {
-        google()
         jcenter()
-        maven { url 'https://jitpack.io' }
+        gradlePluginPortal()
+
+        google()
+        mavenCentral()
+
+        maven { url 'maven.google.com' }
+        maven { url 'https://maven.fabric.io/public' }
+        maven { url "https://jitpack.io" }
+        maven { url 'https://plugins.gradle.org/m2/'}
+
     }
 }
 
